# ChangeLog for net-news/canto
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  02 Sep 2008; Jack Miller (TheMoken) <jack@codezen.org>
  -canto-0.4.7.ebuild, +canto-0.4.8.ebuild:
  Version bump.

  23 Aug 2008; Jack Miller (TheMoken) <jack@codezen.org>
  -canto-0.4.6.ebuild, +canto-0.4.7.ebuild:
  Version bump.

  19 Aug 2008; Jack Miller (TheMoken) <jack@codezen.org>
  -canto-0.4.5.ebuild, +canto-0.4.6.ebuild:
  Version bump.

  15 Aug 2008; Jack Miller (TheMoken) <jack@codezen.org>
  -canto-0.4.4.1.ebuild, +canto-0.4.5.ebuild:
  Version bump.

  10 Aug 2008; Jack Miller (TheMoken) <jack@codezen.org>
  -canto-9999-r1.ebuild, +canto-9999-r2.ebuild:
  Remove sed hacks from scm ebuild.

  10 Aug 2008; Jack Miller (TheMoken) <jack@codezen.org>
  -canto-0.4.3-r1.ebuild, +canto-0.4.4.1.ebuild:
  Version bump. Remove sed hacks.

  03 Aug 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  canto-0.4.3-r1.ebuild, canto-9999-r1.ebuild:
  Simplify

  01 Aug 2008; Jack Miller (TheMoken) <jack@codezen.org>
  -canto-0.4.3.ebuild, +canto-0.4.3-r1.ebuild, -canto-9999.ebuild,
  +canto-9999-r1.ebuild:
  Add proper sed scripts.

  28 Jul 2008; Jack Miller (TheMoken) <jack@codezen.org>
  -canto-0.4.2.ebuild, +canto-0.4.3.ebuild:
  Version bump.

  17 Jul 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> -canto-0.4.1.ebuild:
  Remove old version

  17 Jul 2008; Jack Miller (TheMoken) <jack@codezen.org> ChangeLog:
  Update Manifest due to bad tarball.

  17 Jul 2008; Jack Miller (TheMoken) <jack@codezen.org>
  +canto-0.4.2.ebuild:
  Version bump, with new warning.

  06 Jul 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  canto-0.4.1.ebuild:
  Simplify

  06 Jul 2008; Jack Miller (TheMoken) <jack@codezen.org>
  -canto-0.4.0.ebuild, +canto-0.4.1.ebuild:
  Version bump.

  05 Jul 2008; Jack Miller (TheMoken) jack@codezen.org +canto-9999.ebuild:
  Add git ebuild.

  04 Jul 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  canto-0.4.0.ebuild: