@@ -1,5 +1,3 @@
-DIST canto-0.4.8.tar.gz 29323 RMD160 b60b33491f64e7d944f7f9bdd1012e4fce111981 SHA1 4f9a4d2152d7cfc4e1540c41c994c17fb9acac2b SHA256 1d3e926d110a7b87b77b668e6b1d37cae3f87f2a88197ac644aac6ad41ccc64c
-EBUILD canto-0.4.8.ebuild 572 RMD160 8fbd6544eea7a037bbc22fc4ef44ecb4606942dd SHA1 2f4a16c0e97cedc098705f63ca8a96737085985b SHA256 43e4354f1e5a909749bc6e71d18d89d7a05acf2b5f4343f5a4b437840811d303
-EBUILD canto-9999-r2.ebuild 381 RMD160 4693bec570af38994cd528092947419a836dad37 SHA1 c5bcd3038229bbf85ea618d74e2fc5479d658eb9 SHA256 f30c13050ba039425f3c5fd3447c460f63f73a155b8c7baabfaeb3916aae306c
-MISC ChangeLog 2222 RMD160 df0be6f87c0fd83a0fbc38c6592e66a5b2d6a01d SHA1 0b1afd943c51fc0c90b647709c1bf63bc2dba495 SHA256 23ebe6692fa987b728a6d13172d100b20c8ddae0916680a9221e1139877af9d1
+EBUILD canto-9999-r3.ebuild 426 RMD160 c5192216f3a13a6be17e1d7204a59ff14aac746d SHA1 b20e290ddca5589ca20f311ebafce6f8a2e6bbad SHA256 0a7aff9e349d6d328fa03682672a82ebe8546c11b89aa3522ea5ead7129eb9ac
+MISC ChangeLog 2384 RMD160 2530360c5e3db10372850ddfe6c417dc4d99049f SHA1 7cc6cd6c9c56cdc4d4bada852d3ee89808be9bbf SHA256 dad8be6e52fe4d791a25f501cca23b0f66f9214cf26351d7384e3740c731f105
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
